Added field batchId to the status
